# KLY-PROJECT

./: README.md  README_SETUP.md  setup_env.ps1
01_bedrock/migrations/: .gitkeep
01_bedrock/schema/: 001_initial_ledger.sql  002_proximity_graph.sql  003_evidence_vault.sql  004_operating_hours.sql  006_grand_unification.sql
01_bedrock/seeds/: .gitkeep  001_initial_stock.sql
02_core_logic/: CMakeLists.txt
02_core_logic/include/: constants.h  db_connector.h  orchestrator.h  structs.h
02_core_logic/src/: db_connector.cpp  main.cpp
02_core_logic/src/idempotency/: guard.cpp
02_core_logic/src/orchestrator/: orchestrator.cpp  state_machine.cpp
02_core_logic/src/routing/: proximity.cpp  routing.cpp
02_core_logic/tests/: .gitkeep
02_engine/src/: orchestrator.cpp
03_gateway/: .env.example  .gitignore  app.py  init_db.py  migrate_escrow.py  requirements.txt  test_import.py  test_payload.json  test_setup.py  worker.py
03_gateway/api/: admin.py  agents_ucp.py  auth.py  gifts.py  internal_worker.py  onboarding.py  payments_ap2.py  pricing.py  shop_dashboard.py  verification.py
03_gateway/services/: analytics.py  currency_oracle.py  database.py  gemini_vision.py  gratitude.py  models.py  push.py  zra_fiscalizer.py
03_gateway/services/notifications/: console_mock.py  firebase_push.py  interface.py  twilio_sms.py
03_gateway/static/.well-known/: ai-plugin.json
03_gateway/tests/: __init__.py  conftest.py
03_gateway/tests/unit/: __init__.py
04_skin/: .gitignore  README.md  analyze_output.txt  pubspec.yaml
04_skin/android/app/: build.gradle.kts
04_skin/assets/: .gitkeep
04_skin/ios/Runner/: Info.plist
04_skin/ios/Runner.xcodeproj/: project.pbxproj
04_skin/lib/: main.dart  playground.dart
04_skin/lib/components/: gift_tracker_bar.dart  shop_order_card.dart  shop_scanner_view.dart
04_skin/lib/config/: feature_flags.dart
04_skin/lib/models/: order_model.dart
04_skin/lib/screens/: .gitkeep  collection_key.dart  rider_camera.dart  sender_catalog.dart
04_skin/lib/services/: api_service.dart  currency_service.dart  gift_provider.dart  kithly_api.dart  local_database_helper.dart  mock_shop_service.dart  payment_gate.dart  product_repository.dart  receipt_generator.dart  sync_db.dart  (+2 more)
04_skin/linux/: CMakeLists.txt
04_skin/test/: widget_test.dart
04_skin/web/: index.html  manifest.json
04_skin/windows/: CMakeLists.txt
05_ops/: docker-compose.yml
05_ops/docker/: Dockerfile.core  Dockerfile.db  Dockerfile.gateway
docs/: api_reference.md  protocol_spec.md
(+60 files in other folders)
